--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <article class="main-article">
         <h1 class="article-header">Heading</h1>
         <p class="article-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quas provident reprehenderit. Maiores debitis amet magni placeat reprehenderit quaerat hic.</p>
+
         <a href="" class="page-link">Lorem ipsum dolor sit amet.</a>
+        <img class="img" src="./assets/images/picture1.jpg" alt="Picture1">
     </article>
+
 
 </body>
 </html>
